Upgrade Scala & SBT