@@ -1,4 +1,4 @@
-val scala3Version = "3.4.0"
+val scala3Version = "3.4.2"
 
 lazy val root = project
   .in(file("."))
@@ -11,9 +11,6 @@ lazy val root = project
     libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test,
 
     fork := true,
-    javaOptions ++= Seq(
-      "-Xverify:none"
-    ),
   )
 
 enablePlugins(JmhPlugin)
